# Hack-230535-Temp_Alert-

./: .gitignore
Final_techfest/: README.md  env.env  finallogin.py  inside.py  private_keys.json  pyproject.toml  storage.py  temperature.py
